Tue Apr 15 10:58:53 EDT 2003	JK Lowden <jklowden@schemamania.org>
	* src/dblib/dblib.c src/tds/mem.c
	- Applied Bill Thompson's suggestions. 

Tue Apr 15 01:19:53 EDT 2003	JK Lowden <jklowden@schemamania.org>
	* src/tds/alternative_character_sets.h
	* src/tds/sybase_character_sets.h.pl
	* src/tds/character_sets.h include/tdsiconv.h src/tds/iconv.c
	- s/cannonical/canonical/g

Mon Apr 14 22:53:56 EDT 2003	JK Lowden <jklowden@schemamania.org>
	* src/tds/sybase_character_sets.h.pl utility script
	* src/tds/Makefile.am
	* src/tds/sybase_character_sets.h
	- Sybase<->iconv charset name translation table
	* src/tds/alternative_character_sets.h src/tds/iconv.c
	- added tds_sybase_charset_name()

Mon Apr 14 09:41:58 EDT 2003 	JK Lowden <jklowden@schemamania.org>
	* include/tdsiconv.h src/tds/Makefile.am
	- more support for tds_cannonical_charset_name()

Mon Apr 14 09:25:46 EDT 2003	JK Lowden <jklowden@schemamania.org>
	* src/tds/mem.c don't dereference NULL pointer in tds_free_locale().

Sun Apr 13 23:04:33 EDT 2003	JK Lowden <jklowden@schemamania.org>
	* src/ctlib/unittests/cs_config.c added to cvs for patch 719581
	* src/tds/alternative_character_sets.h for tds_cannonical_charset_name()
	* src/tds/character_sets.h src/tds/iconv.c src/tds/read.c
	- Added tds_cannonical_charset_name() to look up character set names.
	- Allowed tds_get_char_data() to read across a character boundary.
	
Sun Apr 13 12:04:24 EDT 2003	JK Lowden <jklowden@schemamania.org>
	* include/cspublic.h src/ctlib/cs.c 
	* src/ctlib/unittests/Makefile.am
	- patch 719581: cs_userdata option for cs_config by Swapna Anand

Sun Apr 13 11:06:49 EDT 2003	JK Lowden <jklowden@schemamania.org>
	* INSTALL.CVS configure.in removed outdated macros, documented
	*  include/tdsiconv.h minor cleanup

Sat Apr 12 18:18:25 EDT 2003	JK Lowden <jklowden@schemamania.org>
	* Makefile.am	distribute VMS-specific files
	* include/tdsiconv.h define ICONV_CONST even in absence of iconv.
	