@@ -1,3 +1,6 @@
+Wed Apr 16 12:22:46 EDT 2003	JK Lowden <jklowden@schemamania.org>
+	* src/tds/write.c fixed tds_put_string() 
+
 Tue Apr 15 10:58:53 EDT 2003	JK Lowden <jklowden@schemamania.org>
 	* src/dblib/dblib.c src/tds/mem.c
 	- Applied Bill Thompson's suggestions. 
